Add next TWs for structural check

--- a/data/release_post_managers.yml
+++ b/data/release_post_managers.yml
@@ -32,7 +32,7 @@ releases:
   manager: dorrino
   manager-name: Dilan Orrino
   manager-shadow: hsutor
-  structural_check: tbd
+  structural_check: ashrafkhamis
   messaging: supadhyaya
   messaging-shadow: tbd
   social: --
@@ -43,7 +43,7 @@ releases:
   manager: abellucci
   manager-name: Alana Bellucci
   manager-shadow: dorrino
-  structural_check: tbd
+  structural_check: phillipwells
   messaging: anair5
   messaging-shadow: tbd
   social: --
