--- a/data/team_members/person/j/jaimemartinez.yml
+++ b/data/team_members/person/j/jaimemartinez.yml
@@ -2,7 +2,7 @@
 name: Jaime Martínez
 locality:
 country: Remote
-role: <a href="/job-families/engineering/development/backend/senior/">Senior Backend Engineer, Package</a>
+role: <a href="/job-families/engineering/development/backend/senior/">Senior Backend Engineer, Package:Container Registry</a>
 reports_to: michelletorres
 picture: jaimemartinez.jpg
 twitter: jimbart098
@@ -14,8 +14,9 @@ departments:
 - Engineering Function
 - Development Department
 - Ops Sub-department
-- Package Group
-- Package BE Team
+- Package Stage
+- Package:Container Registry Group
+- Package:Container Registry BE Team
 projects:
   release-cli: maintainer
   gitlab-pages: maintainer
@@ -31,5 +32,5 @@ story: |
 domain_expertise:
 - go
 - pages
-specialty: Package
+specialty: Package:Container Registry
 
