Update Gitaly:Git team members and who they report to

--- a/data/team_members/person/a/avar.yml
+++ b/data/team_members/person/a/avar.yml
@@ -3,7 +3,7 @@ name: Ævar Arnfjörð Bjarmason
 locality:
 country: Remote
 role: Git contractor at GitLab
-reports_to: andrashorvath
+reports_to: jcaigitlab
 picture: avar.png
 twitter: avarab
 gitlab: avar
