--- a/data/team_members/person/j/jcaigitlab.yml
+++ b/data/team_members/person/j/jcaigitlab.yml
@@ -2,8 +2,8 @@
 name: John Cai
 locality:
 country: Remote
-role: <a href="/job-families/engineering/development/backend/">Interim Engineering Manager, Git</a>
-reports_to: andrashorvath
+role: <a href="/job-families/engineering/development/backend/manager/">Interim Engineering Manager, Git</a>
+reports_to: chun-d
 picture: johncai.JPG
 pronouns: He/Him
 pronunciation:
