--- a/data/team_members/person/t/toon-c.yml
+++ b/data/team_members/person/t/toon-c.yml
@@ -4,7 +4,7 @@ locality:
 country: Remote
 role: <a href="/job-families/engineering/development/backend/#gitaly">Senior Backend
   Engineer, Gitaly</a>
-reports_to: andrashorvath
+reports_to: jcaigitlab
 picture: toon.jpg
 twitter: to1ne
 gitlab: toon
