--- a/data/team_members/person/c/christian-c.yml
+++ b/data/team_members/person/c/christian-c.yml
@@ -4,7 +4,7 @@ locality:
 country: Remote
 role: <a href="/job-families/engineering/development/backend/">Senior Backend Engineer,
   Gitaly</a>
-reports_to: andrashorvath
+reports_to: jcaigitlab
 picture: christiancouder.jpg
 twitter: ChristianCouder
 gitlab: chriscool
