Update Paige Cordero's Team Page entry

--- a/data/team_members/person/p/p_cordero.yml
+++ b/data/team_members/person/p/p_cordero.yml
@@ -1,17 +1,17 @@
 name: Paige Cordero
 locality: 
 country: Remote
-role: <a href="">Senior Product Manager</a>
+role: <a href="/job-families/product/product-manager/">Senior Product Manager</a>, Growth:Activation
 reports_to: sam-awezec
-picture: ../gitlab-logo-extra-whitespace.png
-pronouns:
+picture: paigecordero.png
+pronouns: she/her
 pronunciation:
 twitter:
-linkedin:
+linkedin: paigecordero
 gitlab: p_cordero
 departments:
-  - Growth
+  - Marketing
 specialty: "Growth"
 expertise:
-story:
+story: Paige is a Senior Product Manager on Gitlab’s Growth team. She is passionate about optimizing and improving customer experiences in the product that lead to positive outcomes for the business. She enjoys building relationships and collaborating with stable counterparts on projects and experiments. Outside of work, Paige enjoys spending time with her family and friends. She loves cooking and hosting dinner parties or discovering new food spots around town. 
 
