Update my profile on the teams page

--- a/data/team_members/person/l/liselotpoppink.yml
+++ b/data/team_members/person/l/liselotpoppink.yml
@@ -3,15 +3,19 @@ locality:
 country: Remote
 role: <a href="">Regional Manager, Professional Services</a>
 reports_to: melaniross
-picture: ../gitlab-logo-extra-whitespace.png
-pronouns:
+picture: liselotp.jpg
+pronouns: she/her
 pronunciation:
 twitter:
 linkedin:
-gitlab: liselot poppink
+gitlab: Lpoppink
 departments:
+  - Customer Success
+  - Professional Services
   - Consulting Delivery
-specialty: "Acquisition"
+specialty: "Servant Leadership"
 expertise:
-story:
+story: Born and raised in Enschede, part of the East of The Netherlands, also called Twente. I studied computer science at the time when nobody knew what a computer was. Very challenging but somehow I made it. Married to Franco who I met at Computer science. We have a daughter Anna who just graduated and starts her first job and makes me a proud mom. I am already 37 years in the IT, started as C developer and have had several roles like developer, 3rd line UNIX support, Consultant, Project Management, Entrepeneur, COO, Sales Manager, Managing Director, BDM, Consulting manager and Director EMEA Services. Important for me at my work are fun, autonomy, trust, creativity, innovation, transparency and authenticity. So, culture and the values are first priority for me as a leader. I start my day with meditation, pilates and/or fitness. During the weekend I like to walk and paddle and go to my favorite footbal club FC Twente. Love cooking and have dinner with family and friends. I love to read and listen to music. Traveling to my favorite country Italy a few times a year, if possible
+
+
 
