Adding Rocco to the pets team page.

--- a/data/pets.yml
+++ b/data/pets.yml
@@ -1,4 +1,8 @@
 ---
+- name: Rocco
+  picture: rocco 2.jpg
+  human: Gaby Berkman
+  story: Rocco is a chihuahua-rat terrier mix, rescued from Last Hope K9. Originally from Little Rock Arkansas (hence his name) , Rocco finds he hates the cold Boston winters, but loves wearing his coats and sweaters, and of course, snuggling with his humans. His other hobbies include eating carrots, visiting his neighborhood dog friends, chasing small(er than him) creatures, napping and giving kisses.
 - name: Turk Turk
   picture: turkturk.png
   human: Lauren Barker
