Eli Krohn update on GitLab team page

--- a/data/team_members/person/e/elikrohn.yml
+++ b/data/team_members/person/e/elikrohn.yml
@@ -3,15 +3,15 @@ locality:
 country: Remote
 role: <a href="">VP, Revenue Operations</a>
 reports_to: dhong
-picture: ../gitlab-logo-extra-whitespace.png
-pronouns:
-pronunciation:
+picture: ekrohn.jpeg
+pronouns: he/him
+pronunciation: e-lie
 twitter:
-linkedin:
+linkedin: https://www.linkedin.com/in/elikrohn/
 gitlab: elikrohn 
 departments:
   - Field Ops - Child
-specialty: ""
+specialty: "Revenue generating strategy and operations"
 expertise:
 story:
 
