Integrations categories: Update feature_labels to label

--- a/data/categories.yml
+++ b/data/categories.yml
@@ -742,8 +742,7 @@ remote_development:
 api:
   name: API
   stage: manage
-  feature_labels:
-    - Category:API
+  label: "Category:API"
   direction: /direction/manage/integrations/
   documentation: https://docs.gitlab.com/ee/integration/
   description: "GitLab offers a REST and GraphQL API to give customers options on how to best integrate with GitLab."
@@ -753,8 +752,7 @@ api:
 integrations:
   name: Integrations
   stage: manage
-  feature_labels:
-    - Category:Integrations
+  label: "Category:Integrations"
   direction: /direction/manage/integrations/
   documentation: https://docs.gitlab.com/ee/integration/
   description: "Integrations are places where the GitLab product connects to features and services from other products. These integrations seek to offer our customers a seamless experience between these products, and range from lightweight features like Slack notifications for projects, to deep and complex integrations with Atlassian JIRA that connect a wide array of functionality throughout the GitLab product."
@@ -769,8 +767,7 @@ integrations:
 webhooks:
   name: Webhooks
   stage: manage
-  feature_labels:
-    - Category:Webhooks
+  label: "Category:Webhooks"
   direction: /direction/manage/integrations/
   documentation: https://docs.gitlab.com/ee/integration/
   description: "Webhooks are a generic way for projects to be integrated with any other service. GitLab's Webhooks proactively send data to another service when certain events happen. These are increasingly important for external vendors, as they offer a key way to integrate with GitLab that doesn't require them building inside our codebase."
