--- a/data/release_posts/unreleased/configure-support-environment-deployment-tiers-in-gitlab-agent.yml
+++ b/data/release_posts/unreleased/configure-support-environment-deployment-tiers-in-gitlab-agent.yml
@@ -4,7 +4,7 @@ features:
   - name: "Restrict the agent for Kubernetes by environment deployment tiers"
     available_in: [premium, ultimate]
     gitlab_com: true
-    documentation_link: 'https://docs.gitlab.com/ee/user/clusters/agent/ci_cd_workflow.html#impersonate-the-cicd-job-that-accesses-the-cluster).'
+    documentation_link: 'https://docs.gitlab.com/ee/user/clusters/agent/ci_cd_workflow.html#impersonate-the-cicd-job-that-accesses-the-cluster'
     reporter: nagyv-gitlab
     stage: configure
     categories:
