--- a/data/release_posts/unreleased/configure-support-environment-deployment-tiers-in-gitlab-agent.yml
+++ b/data/release_posts/unreleased/configure-support-environment-deployment-tiers-in-gitlab-agent.yml
@@ -12,9 +12,7 @@ features:
     - Deployment Management
     issue_url: 'https://gitlab.com/gitlab-org/gitlab/-/issues/357934'
     description: |
-      Kubernetes administrators can now restrict CI/CD access to specific
-      [environment tiers](https://docs.gitlab.com/ee/ci/environments/#deployment-tier-of-environments)
-      using the agent for Kubernetes.
+      Kubernetes administrators can now restrict CI/CD access to specific [environment tiers](https://docs.gitlab.com/ee/ci/environments/#deployment-tier-of-environments) with RBAC, using the agent for Kubernetes.
 
       In past releases, administrators could not restrict access to specific tiers, which added potential security
       risks to Kubernetes integrations.
