--- a/data/release_posts/unreleased/create-enforce-developer-certificates-of-origin-on-all-contributio.yml
+++ b/data/release_posts/unreleased/create-enforce-developer-certificates-of-origin-on-all-contributio.yml
@@ -12,6 +12,6 @@ features:
     - Source Code Management
     issue_url: 'https://gitlab.com/gitlab-org/gitlab/-/issues/368894'
     description: |
-      The Developer Certificate of Origin (DCO) is a per-commit sign-off made by a contributor stating that they have the right to submit the code to the project. By signing off on a commit, the contributor agrees to the terms published at [developercertificate.org.](https://developercertificate.org).
+      The Developer Certificate of Origin (DCO) is a per-commit sign-off made by a contributor stating that they have the right to submit the code to the project. By signing off on a commit, the contributor agrees to the terms published at [developercertificate.org](https://developercertificate.org).
 
       Now, you can easily enforce this Developer Certificate via [a per-project setting](https://docs.gitlab.com/ee/user/project/repository/push_rules.html#reject-commits-that-arent-dco-certified) to prevent contibutors from contributing code that violates your license. When enabled, all new commits must include such a certificate of origin in form of a line in the commit message `Signed-off-by:`.
