Add gitlab-shell project entry

--- a/data/team_members/person/h/hacks4oats.yml
+++ b/data/team_members/person/h/hacks4oats.yml
@@ -21,6 +21,7 @@ story: |
   gaming and spending time outdoors.
 projects:
   gitlab: reviewer go
+  gitlab-shell: trainee_maintainer
   secure-DS-gemnasium: reviewer backend
   secure-LC-license-finder: reviewer backend
   secure-container-scanning: reviewer backend
