--- a/data/release_posts/unreleased/manage-email-the-user-when-their-twofactor-otp-attempt-is-wrong.yml
+++ b/data/release_posts/unreleased/manage-email-the-user-when-their-twofactor-otp-attempt-is-wrong.yml
@@ -11,5 +11,8 @@ features:
     categories: [System Access]
     issue_url: 'https://gitlab.com/gitlab-org/gitlab/-/issues/374740'
     description: |
-      If a user has 2FA enabled, and a bad actor has entered their username and password successfully, they then have to enter an OTP successfully to breach an account. However, the user would not know incorrect codes are being entered.
-      Now, users are immediately alerted via e-mail when their OTP is incorrectly entered, improving security by giving them notice that their account may be compromised.  
+      On accounts with two-factor authentication (2FA) enabled, bad actors that enter correct usernames and passwords must still enter a
+      correct one-time password (OTP) to access the account. However, users would not know incorrect codes are being entered.
+
+      Now users are immediately sent an email when incorrect OTPs are entered when signing in to their account, improving security by
+      notifying them that their account might be compromised.
