Apply 1 suggestion(s) to 1 file(s)

--- a/data/release_posts/unreleased/manage-email-the-user-when-their-twofactor-otp-attempt-is-wrong.yml
+++ b/data/release_posts/unreleased/manage-email-the-user-when-their-twofactor-otp-attempt-is-wrong.yml
@@ -14,5 +14,5 @@ features:
       On accounts with two-factor authentication (2FA) enabled, bad actors that enter correct usernames and passwords must still enter a
       correct one-time password (OTP) to access the account. However, users would not know incorrect codes are being entered.
 
-      Now users are immediately sent an email when incorrect OTPs are entered when signing in to their account, improving security by
+      Now users are immediately sent an email when an incorrect OTP is entered, improving security by
       notifying them that their account might be compromised.
