--- a/data/release_posts/unreleased/bugs.yml
+++ b/data/release_posts/unreleased/bugs.yml
@@ -52,3 +52,4 @@ tertiary:
       - [API Security GraphQL Schema doesn't support a GraphQL endpoind of / (slash)](https://gitlab.com/gitlab-org/gitlab/-/issues/374715)
       - [Reduce API Security XML external entity vulnerability false positives](https://gitlab.com/gitlab-org/gitlab/-/issues/374690)
       - [User correctly prompted for incorrect 2FA PIN or password input vs no prompt](https://gitlab.com/gitlab-org/gitlab/-/issues/346494)
+      - [Auditors cannot see group CI/CD Runners](https://gitlab.com/gitlab-org/gitlab/-/issues/357328) 
