Add info to team page

--- a/data/team_members/person/a/alejandromichell.yml
+++ b/data/team_members/person/a/alejandromichell.yml
@@ -2,8 +2,8 @@
 name: Alejandro Michell
 locality:
 country: Remote
-role: <a href="/job-families/sales/customer-success-management/">Technical Account Manager</a>
-reports_to: christiaanconover
+role: <a href="/job-families/sales/customer-success-management/">Customer Success Manager</a>
+reports_to: tiffanymcatee.gitlab
 picture: alejandromichell.jpg
 pronunciation: 
 twitter: 
