--- a/data/team_members/person/b/briancollins.yml
+++ b/data/team_members/person/b/briancollins.yml
@@ -5,7 +5,7 @@ locality:
 country: Remote
 role: <a href="/job-families/sales/customer-success-management/">Technical Account Manager
   (Enterprise)</a>
-reports_to: christiaanconover
+reports_to: tiffanymcatee.gitlab
 picture: briancollins.png
 twitter: 
 gitlab: brian.collins
