--- a/data/team_members/person/m/mjpazoles.yml
+++ b/data/team_members/person/m/mjpazoles.yml
@@ -1,8 +1,8 @@
 name: Matthew Pazoles
 locality:
 country: Remote
-role: <a href="">Technical Account Manager</a>
-reports_to: christiaanconover
+role: <a href="/job-families/sales/customer-success-management/">Customer Success Manager</a>
+reports_to: tiffanymcatee.gitlab
 picture: matthew_pazoles.png
 pronouns: they/them
 pronunciation: "Puh-Zole-Us"
