--- a/data/team_members/person/t/tiffanymcatee.gitlab.yml
+++ b/data/team_members/person/t/tiffanymcatee.gitlab.yml
@@ -1,13 +1,13 @@
 name: Tiffany McAtee
 locality: 
 country: Remote
-role: <a href="">Manager, Customer Success Managers</a>
+role: <a href="/job-families/sales/customer-success-management/">Manager, Customer Success Managers</a>
 reports_to: christiaanconover
-picture: ../gitlab-logo-extra-whitespace.png
-pronouns:
+picture: tiffanymcatee.png
+pronouns: she/her
 pronunciation:
 twitter:
-linkedin:
+linkedin: https://www.linkedin.com/in/tiffany-mcatee-a73334a/
 gitlab: tiffanymcatee.gitlab
 departments:
   - TAM
