--- a/data/team_members/person/a/adam.jensen.gitlab.yml
+++ b/data/team_members/person/a/adam.jensen.gitlab.yml
@@ -1,8 +1,8 @@
 name: Adam Jensen
 locality: 
 country: Remote
-role: <a href="/job-families/sales/customer-success-management/">Technical Account Manager</a>
-reports_to: christiaanconover
+role: <a href="/job-families/sales/customer-success-management/">Customer Success Manager</a>
+reports_to: tiffanymcatee.gitlab
 picture: adamjensen.jpg
 pronouns: he/him
 pronunciation:
