--- a/data/team_members/person/c/carlosbazan.yml
+++ b/data/team_members/person/c/carlosbazan.yml
@@ -2,8 +2,8 @@
 name: Carlos Bazan
 locality:
 country: Remote
-role: <a href="/job-families/sales/customer-success-management/#senior-tam">Senior Technical Account Manager, U.S. East</a>
-reports_to: christiaanconover
+role: <a href="/job-families/sales/customer-success-management/#senior-tam">Senior Customer Success Manager, U.S. East</a>
+reports_to: tiffanymcatee.gitlab
 picture: carlosbazan.jpg
 twitter: 
 gitlab: cbazan1
