--- a/data/team_members/person/r/ricardoamarilla.yml
+++ b/data/team_members/person/r/ricardoamarilla.yml
@@ -2,8 +2,8 @@
 name: Ricardo Amarilla
 locality:
 country: Remote
-role: <a href="/job-families/sales/customer-success-management/">Technical Account Manager</a>
-reports_to: christiaanconover
+role: <a href="/job-families/sales/customer-success-management/">Customer Success Manager</a>
+reports_to: tiffanymcatee.gitlab
 picture: ricardoamarilla.jpeg
 twitter: ricar_py
 gitlab: ricardoamarilla
